--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -18,7 +18,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			main {
 				width: calc(100% - 2em);
 				max-width: 100%;
-				margin: 0;
+				margin: 0; flex: 1;
+				background-color: #fff;
 			}
 			.hero-image {
 				width: 100%;
@@ -65,7 +66,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="prose">
 					<div class="title">
 						<div class="date">
-							<FormattedDate date={pubDate} />
+							{
+								pubDate && (
+									<FormattedDate date={pubDate} />
+								)
+							}
 							{
 								updatedDate && (
 									<div class="last-updated-on">
