80% ready to deploy

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,7 +41,7 @@ const today = new Date();
 </footer> -->
 <footer>
 	<div class="footer_content">
-		<div class="footer_logo"><img src="stackinsight.dev-logo.png" alt=" Stack Insight"></div>
+		<div class="footer_logo"><img src="/stackinsight.dev-logo.png" alt=" Stack Insight"></div>
 		<div class="group">
 			<nav>
 				<a href="/about">About</a>
