--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import Header from '../../components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate?.valueOf() - a.data.pubDate?.valueOf(),
+	(a, b) => a.data.pubDate && b.data.pubDate ? b.data.pubDate?.valueOf() - a.data.pubDate?.valueOf() : 0,
 );
 ---
 
@@ -100,7 +100,7 @@ const posts = (await getCollection('blog')).sort(
 									)}
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={post.data.pubDate!} />
 									</p>
 								</a>
 							</li>
