--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,7 @@
 /* Ubuntu Font Family */
 @font-face {
   font-family: 'Ubuntu';
-  src: url('./fonts/Ubuntu-Regular.ttf') format('truetype');
+  src: url('/fonts/Ubuntu-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -28,7 +28,7 @@
 /* Rokkitt Variable Font */
 @font-face {
   font-family: 'Rokkitt';
-  src: url('./fonts/Rokkitt-VariableFont_wght.ttf') format('truetype');
+  src: url('/fonts/Rokkitt-VariableFont_wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -66,19 +66,19 @@ h6 {
 	font-family: 'Rokkitt', serif; font-weight: 500; margin: 0 0 0.5rem 0;	color: rgb(var(--black));	line-height: 1.2;
 }
 h1 {
-	font-size: 2.52em;
+	font-size: 2.5em;
 }
 h2 {
-	font-size: 2.241em;
+	font-size: 2.0em;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 1.6em;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.3em;
 }
 h5 {
-	font-size: 1.25em;
+	font-size: 1.1em;
 }
 strong,
 b {
