First complete version

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/BlogPost.astro';
 
 <Layout
 	title="About Me"
-	description="Lorem ipsum dolor sit amet"
+	description="About Me"
 >
 	<p>I'm Ko-Hsin Liang, a Senior Frontend Developer bringing 10+ years of deep Angular specialization to every project. My passion lies in developing sophisticated web interfaces that perfectly balance aesthetic excellence with technical robustness. I thrive on converting strategic business objectives into high-quality web applications, managing the full development spectrum from planning to launch.</p>
 </Layout>
