--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,6 +24,9 @@ footer { background-color: #f8f9fa; box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
     }
     .group {
       display: flex; gap: 10px; flex-direction: column;
+      @media (max-width: 720px) {
+        align-items: flex-end; gap: 5px;
+      }
       nav {
         display: flex; gap: 2rem;
         a { text-decoration: none; color: #6c757d; cursor: pointer; font-size: 0.8em;
@@ -31,7 +34,7 @@ footer { background-color: #f8f9fa; box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
         }
       }
       .footer_copyright { font-size: 0.8em; color: #6c757d; display: flex; gap: 1em;
-        @media (max-width: 786px) {display: flex; flex-direction: column; gap: 0; }
+        @media (max-width: 786px) {display: flex; flex-direction: column; gap: 0; line-height: 1.5; }
       }
     }
   }
