--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -21,8 +21,15 @@ const posts = (await getCollection('blog')).sort(
 				ul { display: flex; flex-wrap: wrap; gap: 2rem;
 					list-style-type: none; margin: 0; padding: 0;
 					li { width: 100%; display: flex; border: 1px solid #eaeaea; border-radius: 12px;
-    				overflow: hidden; transition: all .3s cubic-bezier(.25, .8, .25, 1); 
-						.thumbnail { width: 200px; height: 100%; }
+    				overflow: hidden; transition: all .3s cubic-bezier(.25, .8, .25, 1);
+						@media (max-width: 720px) {
+							flex-direction: column;
+						}
+						.thumbnail { width: 200px; height: 100%;
+							@media (max-width: 720px) {
+								width: 100%; max-height: 200px;
+							}
+						}
 						img { width: 100%; height: 100%; object-fit: cover; transition: transform .5s ease; border-radius: 0;}
 						.blog-content { display: flex; flex-direction: column; padding: 20px;
 							background: linear-gradient(135deg, #fff, #f8f9fa); gap: 10px;
