refactor: convert all image assets from jpg/png to webp format

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 
 <footer>
 	<div class="footer_content">
-		<div class="footer_logo"><img src="/stackinsight.dev-logo.png" alt=" Stack Insight"></div>
+		<div class="footer_logo"><img src="/stackinsight.dev-logo.webp" alt=" Stack Insight"></div>
 		<div class="group">
 			<nav>
 				<a href="/about">About</a>
