--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
 import type { ImageMetadata } from 'astro';
-import FallbackImage from '../assets/og-fallback.jpg';
+import FallbackImage from '../assets/og-fallback.webp';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 interface Props {
