--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -25,11 +25,14 @@ const posts = (await getCollection('blog')).sort(
 						@media (max-width: 720px) {
 							flex-direction: column;
 						}
-						.thumbnail { width: 200px; height: 100%;
+						.thumbnail { width: 200px; height: 100%; flex: 0 0 200px;
 							@media (max-width: 720px) {
 								width: 100%; max-height: 200px;
 							}
 						}
+						> a { display: flex; @media (max-width: 720px) {
+								display: block;
+							}}
 						img { width: 100%; height: 100%; object-fit: cover; transition: transform .5s ease; border-radius: 0;}
 						.blog-content { display: flex; flex-direction: column; padding: 20px;
 							background: linear-gradient(135deg, #fff, #f8f9fa); gap: 10px;
@@ -90,9 +93,9 @@ const posts = (await getCollection('blog')).sort(
 									<div class="blog-content">
 										<h4 class="title">{post.data.title}</h4>
 										<p class="description">{post.data.description}</p>
-										<div class="repo">
+										{post.data.repo && <div class="repo">
 											<a href={post.data.repo} target="_blank">View on GitHub</a>
-										</div>
+										</div>}
 										<p class="date">
 											<FormattedDate date={post.data.pubDate!} />
 										</p>
