feat: add docs section and implement markdown link rewriting plugin

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ const today = new Date();
 	</div>
 </footer>
 <style lang="scss">
-footer { background-color: #f8f9fa; box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
+footer { background-color: #fdfdfd; box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
   .footer_content { display: flex; justify-content: space-between; align-items: center; 
     padding: 20px; max-width: 1000px; margin: 0 auto;
     .footer_logo {
