--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import HeaderLink from './HeaderLink.astro';
 		<h2><a class="logo" href="/"><img src="/stackinsight.dev-logo.webp" alt="Stack Insight Logo" /></a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
+			<HeaderLink href="/docs">Docs</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
 		</div>
 		<!-- 
@@ -44,7 +45,7 @@ import HeaderLink from './HeaderLink.astro';
 	</nav>
 </header>
 <style lang="scss">
-	header { background-color: #f8f9fa; box-shadow: 0 2px 8px rgba(var(--black), 5%);
+	header { background-color: #fdfdfd; box-shadow: 0 2px 8px rgba(var(--black), 5%);
 		nav { display: flex; justify-content: space-between; align-items: center; max-width: 1000px;
 			padding: 20px; margin: 0 auto; }
 		.logo { margin: 0; cursor: pointer; 
