--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -35,7 +35,7 @@ const posts = (await getCollection('blog')).sort(
 							}}
 						img { width: 100%; height: 100%; object-fit: cover; transition: transform .5s ease; border-radius: 0;}
 						.blog-content { display: flex; flex-direction: column; padding: 20px;
-							background: linear-gradient(135deg, #fff, #f8f9fa); gap: 10px;
+							background: linear-gradient(135deg, #fff, #fdfdfd); gap: 10px;
 							a { display: flex; flex-direction: column; gap: 10px; }
 							.title { margin: 0; color: rgb(var(--black)); line-height: 1.2; }
 							.description { margin: 0; color: rgb(var(--gray)); line-height: 1.5; }
