feat: add empirical study on blocking I/O prevalence and performance impact in Node.js

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -127,7 +127,8 @@ blockquote {
 	border-left: 4px solid var(--accent);
 	padding: 0 0 0 20px;
 	margin: 0px;
-	font-size: 1.333em;
+	font-size: 1em;
+	line-height: 1.6;
 }
 hr {
 	border: none;
